--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-09-21  Martin Baulig  <martin@ximian.com>
+
+	* test/TestProperty.cs: New test.
+	* test/mono-debugger.tests/TestProperty.exp: New test.
+
 2005-09-20  Martin Baulig  <martin@ximian.com>
 
 	* interfaces/ITargetStructType.cs
