--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-09-21  Martin Baulig  <martin@ximian.com>
 
+	* test/TestBreakpoint.cs: New test.
+	* test/mono-debugger.tests/TestBreakpoint.exp: New test.
+
+2005-09-21  Martin Baulig  <martin@ximian.com>
+
 	* test/TestProperty.cs: New test.
 	* test/mono-debugger.tests/TestProperty.exp: New test.
 
