--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2005-09-23  Martin Baulig  <martin@ximian.com>
+
+	* backends/SingleSteppingEngine.cs
+	(OperationRun): Derive from `Opeartion', not `OperationStepBase'.
+	(OperationCompileMethod): Killed the nested operation.
+	(OperationRuntimeInvoke.DoProcessEvent): Step over breakpoints
+	during runtime-invoke.
+
+	* test/mono-debugger.tests/TestBreakpoint.exp: Added test case: we
+	step over breakpoints during runtime-invoke.
+
 2005-09-22  Martin Baulig  <martin@ximian.com>
 
 	* interfaces/ITargetStructType.cs
