--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2005-09-23  Martin Baulig  <martin@ximian.com>
 
+	* interfaces/ITargetObject.cs
+	(ITargetObject.IsValid): Removed.
+	(ITargetObject.RawContents): Removed.
+	(ITargetObject.DynamicSize): Removed.
+	(ITargetObject.GetRawDynamicContents): Removed.
+	(ITargetObject.Print): Take an `ITargetAccess' argument.
+
+2005-09-23  Martin Baulig  <martin@ximian.com>
+
 	* backends/SingleSteppingEngine.cs
 	(OperationRun): Derive from `Opeartion', not `OperationStepBase'.
 	(OperationCompileMethod): Killed the nested operation.
