--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-09-23  Martin Baulig  <martin@ximian.com>
 
+	* interfaces/ITargetFundamentalObject.cs
+	(ITargetFundamentalObject.HasObject): Removed.
+	(ITargetFundamentalObject.Object): Replaced the property with a
+	`GetObject (ITargetAccess target)' method.
+
+2005-09-23  Martin Baulig  <martin@ximian.com>
+
 	* interfaces/ITargetObject.cs
 	(ITargetObject.IsValid): Removed.
 	(ITargetObject.RawContents): Removed.
