--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,18 @@
 2005-09-23  Martin Baulig  <martin@ximian.com>
 
+	* interfaces/ITargetType.cs (ITargetType.IsByRef): New property.
+
+	* backends/mono/MonoObject.cs
+	(MonoObject.Type): Return an `ITargetType' instead of a
+	`MonoType'.
+
+	* backends/mono/MonoType.cs
+	(MonoType.File): Removed.
+	(MonoType..ctor): Take an `ILanguage' instead of a
+	`MonoSymbolFile'.	
+
+2005-09-23  Martin Baulig  <martin@ximian.com>
+
 	* interfaces/ITargetFundamentalObject.cs
 	(ITargetFundamentalObject.HasObject): Removed.
 	(ITargetFundamentalObject.Object): Replaced the property with a
