--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 2005-09-23  Martin Baulig  <martin@ximian.com>
 
 	* interfaces/ILanguage.cs
+	(ILanguage.TargetInfo): New property.
+
+2005-09-23  Martin Baulig  <martin@ximian.com>
+
+	* interfaces/ILanguage.cs
 	(ILanguage.AllocateMemory): New method.
 
 	* backends/mono/MonoLanguageBackend.cs
