--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2005-09-23  Martin Baulig  <martin@ximian.com>
 
+	* languages/mono/MonoType.cs: Moved to languages/TargetType.cs.
+	(MonoType): Renamed to `TargetType'.
+
+	* languages/mono/MonoObject.cs: Moved to languages/TargetObject.cs.
+	(MonoObject): Renamed to `TargetObject'.
+
+2005-09-23  Martin Baulig  <martin@ximian.com>
+
 	* languages/: New directory.
 
 	* backends/mono/: Moved to languages/mono/.
