--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-09-23  Martin Baulig  <martin@ximian.com>
 
+	* languages/native/NativeType.cs: Removed; use `TargetType' instead.
+
+	* languages/native/NativeObject.cs: Removed; use `TargetObject' instead.
+
+2005-09-23  Martin Baulig  <martin@ximian.com>
+
 	* arch/StabsReader.cs: Removed for the moment until someone fully
 	implements PowerPC support.
 
