--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-09-23  Martin Baulig  <martin@ximian.com>
 
+	* languages/mono/MonoFundamentalObjectBase.cs
+	(MonoFundamentalObjectBase): Merged into `MonoFundamentalObject'.
+
+2005-09-23  Martin Baulig  <martin@ximian.com>
+
 	* languages/native/NativeType.cs: Removed; use `TargetType' instead.
 
 	* languages/native/NativeObject.cs: Removed; use `TargetObject' instead.
