--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2005-09-23  Martin Baulig  <martin@ximian.com>
 
+	* languages/native/NativeFundamentalType.cs: Removed; use
+	`TargetFundamentalType' instead.
+
+	* languages/native/NativeFundamentalObject.cs: Removed; use
+	`TargetFundamentalObject' instead.
+
+2005-09-23  Martin Baulig  <martin@ximian.com>
+
 	* languages/mono/MonoFundamentalType.cs: Moved to
 	languages/TargetFundamentalType.cs
 	(MonoFundamentalType): Renamed to `TargetFundamentalType'.
