--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-24  Martin Baulig  <martin@ximian.com>
+
+	* languages/TargetFunctionType.cs: New file.
+
 2005-09-23  Martin Baulig  <martin@ximian.com>
 
 	* languages/native/NativeFundamentalType.cs: Removed; use
