--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-09-24  Martin Baulig  <martin@ximian.com>
 
+	* interfaces/IVariable.cs (IVariable.IsValid): Removed.
+
+	* languages/TargetType.cs (TargetType.GetObject): Made this
+	`internal', not `public'.
+
+2005-09-24  Martin Baulig  <martin@ximian.com>
+
 	* languages/TargetFunctionType.cs: New file.
 
 2005-09-23  Martin Baulig  <martin@ximian.com>
