--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-09-24  Martin Baulig  <martin@ximian.com>
 
+	* interfaces/ITargetArrayObject.cs
+	(ITargetArrayObject.this): Replaced the indexer with a
+	`GetElement()' and a `SetElement()' method; both taking an
+	`ITargetAccess' argument.
+
+2005-09-24  Martin Baulig  <martin@ximian.com>
+
 	* interfaces/IVariable.cs (IVariable.IsValid): Removed.
 
 	* languages/TargetType.cs (TargetType.GetObject): Made this
