--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-09-24  Martin Baulig  <martin@ximian.com>
 
+	* interfaces/ITargetFundamentalObject.cs
+	(ITargetFundamentalObject.SetObject): Added `ITargetAccess' arg.
+
+2005-09-24  Martin Baulig  <martin@ximian.com>
+
 	* interfaces/ITargetPointerObject.cs
 	(ITargetPointerObject.GetArrayElement): Added `ITargetAccess' arg.
 
