--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-09-25  Martin Baulig  <martin@ximian.com>
 
+	* interfaces/ITargetType.cs: Removed.
+
+	* interfaces/ITargetObject.cs: Removed.
+
+2005-09-25  Martin Baulig  <martin@ximian.com>
+
 	* interfaces/ITargetTypeAlias.cs: Removed.
 
 2005-09-25  Martin Baulig  <martin@ximian.com>
