2005-09-28  Martin Baulig  <martin@ximian.com>
	* tests/TestInheritance.cs: Added tests for abstract classes.


svn path=/trunk/debugger/; revision=50954

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-28  Martin Baulig  <martin@ximian.com>
+
+	* tests/TestInheritance.cs: Added tests for abstract classes.
+
 2005-09-25  Martin Baulig  <martin@ximian.com>
 
 	* backends/TargetAccess.cs
